--- a/index.html
+++ b/index.html
@@ -3,91 +3,111 @@
 <html>
 
 <head>
+    <meta name='viewport' content="width=device-width, initial-scale=1.0, viewport-fit=cover" user-scalable="no">
 
     <title>Marky | Coding</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="iconmarchik.css">
-
 </head>
 
 <body>
+    <section class="menu">
+        <div class="menu__main">
+            <div class="menu__logo-company"><a href="">/ HOME</a></div>
 
-    <div class="main">
+            <div class="menu__nav">
+                <div class="menu__first">
+                    <a href="">The brand</a>
+                    <a href="">Collection</a>
+                    <a href="">Inspration</a>
+                    <a href="">News</a>
+                    <a href="">Our network</a>
 
-        <div class="home-welcome">
-            <div class="home-welcome__logo-company"><a href="">/ HOME</a></div>
-            <div class="home-welcome__first">
-                <p> <span>— The brand</span> <br />
-                    Collection <br />
-                    Inspration <br />
-                    News <br />
-                    Our network <br />
-                    Architects <br />
-                    Contract</p>
+                    <a href="">Architects</a>
+                    <a href="">Contract</a>
+                </div>
+
+                <div class="menu__second">
+                    <a href="">Identity</a>
+                    <a href="">Designers</a>
+                    <a href="">Production</a>
+                </div>
             </div>
-            <div class="home-welcome__second">
-                <p>
-                    Identity <br />
-                    Designers <br />
-                    Production <br />
-                </p>
-            </div>
 
-            <div class="home-welcome__bottom">
+            <div class="menu__bottom">
                 <a href="">Dowloand area</a>
                 <a href="">Outlet</a>
                 <a href="">reserved area</a>
             </div>
-
         </div>
 
-    </div>
-
-    <div class="container">
-
-        <div class="aside">
-
-            <div class="aside__content">
-                <div class="aside__text-language">
-                    <p>CHANGE <br />
-                        LANGUAGE
-                    </p>
+        <div class="menu__aside">
+            <div class="menu__aside-content">
+                <div class="menu__aside-text-language">
+                    <p>CHANGE <br /> LANGUAGE</p>
                 </div>
 
-                <div class="line"></div>
+                <div class="menu__aside-line"></div>
 
-                <div class="aside__language">
+                <div class="menu__aside-language">
                     <button class="button">EN ▼</button>
                 </div>
             </div>
 
-            <div class="aside__links">
-                <div class="aside__link">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <div class="menu__aside-links">
+                <div class="menu__aside-link">
+                    <svg width="24" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M11.459 13.761L5.86537 20.2433C5.71717 20.4132 5.50917 20.5002 5.29997 20.5002C5.12497 20.5002 4.94927 20.4393 4.80717 20.3153C4.49507 20.0429 4.46287 19.5692 4.73527 19.2571L10.5069 12.5709L11.459 13.761ZM13.4938 11.4294L19.2654 4.74317C19.5378 4.43107 19.5056 3.95737 19.1935 3.68497C18.8815 3.41257 18.4075 3.44477 18.1353 3.75687L12.5417 10.2392L13.4938 11.4294Z" />
                         <path
                             d="M20.0501 20.5H16.1501C15.9222 20.5 15.7068 20.3964 15.5645 20.2185L3.36454 4.7185C3.18444 4.4934 3.14934 4.1849 3.27424 3.9251C3.39914 3.6653 3.66184 3.5 3.95014 3.5H7.85014C8.07804 3.5 8.29344 3.6036 8.43574 3.7815L20.6357 19.2815C20.8158 19.5066 20.8509 19.8151 20.726 20.0749C20.6011 20.3347 20.3384 20.5 20.0501 20.5ZM16.5106 19H18.4896L7.48964 5H5.51064L16.5106 19Z" />
                     </svg>
                 </div>
-                <div class="aside__link">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+                <div class="menu__aside-link">
+                    <svg width="24"  viewBox="0 0 48 48" fill="currentColor">
                         <path
                             d="M41.4193 7.30899C41.4193 7.30899 45.3046 5.79399 44.9808 9.47328C44.8729 10.9883 43.9016 16.2908 43.1461 22.0262L40.5559 39.0159C40.5559 39.0159 40.3401 41.5048 38.3974 41.9377C36.4547 42.3705 33.5408 40.4227 33.0011 39.9898C32.5694 39.6652 24.9068 34.7955 22.2086 32.4148C21.4531 31.7655 20.5897 30.4669 22.3165 28.9519L33.6487 18.1305C34.9438 16.8319 36.2389 13.8019 30.8426 17.4812L15.7331 27.7616C15.7331 27.7616 14.0063 28.8437 10.7686 27.8698L3.75342 25.7055C3.75342 25.7055 1.16321 24.0823 5.58815 22.459C16.3807 17.3729 29.6555 12.1786 41.4193 7.30899Z" />
                     </svg>
                 </div>
-                <div class="aside__link">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve">
+                <div class="menu__aside-link">
+                    <svg width="24" viewBox="0 0 24 24" xml:space="preserve" fill="currentColor">
                         <path
                             d="M19.589 6.686a4.793 4.793 0 0 1-3.77-4.245V2h-3.445v13.672a2.896 2.896 0 0 1-5.201 1.743l-.002-.001.002.001a2.895 2.895 0 0 1 3.183-4.51v-3.5a6.329 6.329 0 0 0-5.394 10.692 6.33 6.33 0 0 0 10.857-4.424V8.687a8.182 8.182 0 0 0 4.773 1.526V6.79a4.831 4.831 0 0 1-1.003-.104z" />
                     </svg>
                 </div>
             </div>
-
         </div>
-    </div>
+    </section>
 
+    <style>
+        .menu {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+
+            min-width: 100vw;
+            min-height: 100vh;
+        }
+
+        .menu__main {
+            display: flex;
+            flex-direction: column;
+            flex: 1 1;
+        }
+
+        .menu__aside {
+            color: white;
+            background: black;
+        }
+
+        @media (max-width: 720px) {
+            .menu {
+                flex-direction: column;
+                background-color: red;
+            }
+        }
+    </style>
 
 </body>
 
