--- a/index.html
+++ b/index.html
@@ -8,91 +8,38 @@
     <title>Marky | Coding</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="iconmarchik.css">
 </head>
 
 <body>
-    <section class="menu">
-        <button class="menu__btn-close"></button>
 
-        <div class="menu__main">
-            <div class="menu__logo-company"><a href="">/ HOME</a></div>
-
-            <div class="menu__nav">
-
-                <a class="menu__nav-link" href="">The brand</a>
-                <a class="menu__nav-link" href="">Collection</a>
-                <a class="menu__nav-link" href="">Inspration</a>
-                <a class="menu__nav-link" href="">News</a>
-                <a class="menu__nav-link" href="">Our network</a>
-                <a class="menu__nav-link" href="">Architects</a>
-                <a class="menu__nav-link" href="">Contract</a>
-
-                <div class="menu__nav-small">
-                    <a href="">Identity</a>
-                    <a href="">Designers</a>
-                    <a href="">Production</a>
+    <header class="header">
+        <div class="layout-container">
+            <div class="header__logo">
+                <div class="logo">
+                    <img src="./img/Linklogo.png" alt="">
                 </div>
+            <div class="header__upmenu">
+                <a href="">info@gatd.ca</a>
+                <a href="">(514)776-9917</a>
             </div>
-
-            <div class="menu__bottom">
-                <a href="">Dowloand area</a>
-                <a href="">Outlet</a>
-                <a href="">reserved area</a>
-            </div>
-        </div>
-
-        <div class="menu__aside">
-            <div class="menu__aside-content">
-                <div class="menu__aside-text-language">
-                    <p>CHANGE <br /> LANGUAGE</p>
-                </div>
-
-                <div class="menu__aside-line"></div>
-
-                <div class="menu__aside-language">
-                    <button class="button">EN ▼</button>
-                </div>
-            </div>
-
-            <div class="menu__aside-links">
-                <div class="menu__aside-link">
-                    <svg width="24" viewBox="0 0 24 24" fill="currentColor">
+            <div class="header__downmenu">
+                <ul class="nav">
+                    <li class="nav__list"><a class="link" href="">Air Climatisé</a></li>
+                    <li class="nav__list"><a class="link" href="">Thermopompe</a></li>
+                    <li class="nav__list"><a class="link" href="">Chauffage</a></li>
+                    <li class="nav__list"><a class="link" href="">Financement sur 120 mois</a></li>
+                    <li class="nav__list"><a class="link" href="">Demande de soumission</a></li>
+                </ul>
+                <div class="nav__list">
+                    <a class="link" href="">Rechercher</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18">
                         <path
-                            d="M11.459 13.761L5.86537 20.2433C5.71717 20.4132 5.50917 20.5002 5.29997 20.5002C5.12497 20.5002 4.94927 20.4393 4.80717 20.3153C4.49507 20.0429 4.46287 19.5692 4.73527 19.2571L10.5069 12.5709L11.459 13.761ZM13.4938 11.4294L19.2654 4.74317C19.5378 4.43107 19.5056 3.95737 19.1935 3.68497C18.8815 3.41257 18.4075 3.44477 18.1353 3.75687L12.5417 10.2392L13.4938 11.4294Z" />
-                        <path
-                            d="M20.0501 20.5H16.1501C15.9222 20.5 15.7068 20.3964 15.5645 20.2185L3.36454 4.7185C3.18444 4.4934 3.14934 4.1849 3.27424 3.9251C3.39914 3.6653 3.66184 3.5 3.95014 3.5H7.85014C8.07804 3.5 8.29344 3.6036 8.43574 3.7815L20.6357 19.2815C20.8158 19.5066 20.8509 19.8151 20.726 20.0749C20.6011 20.3347 20.3384 20.5 20.0501 20.5ZM16.5106 19H18.4896L7.48964 5H5.51064L16.5106 19Z" />
-                    </svg>
-                </div>
-                <div class="menu__aside-link">
-                    <svg width="24" viewBox="0 0 48 48" fill="currentColor">
-                        <path
-                            d="M41.4193 7.30899C41.4193 7.30899 45.3046 5.79399 44.9808 9.47328C44.8729 10.9883 43.9016 16.2908 43.1461 22.0262L40.5559 39.0159C40.5559 39.0159 40.3401 41.5048 38.3974 41.9377C36.4547 42.3705 33.5408 40.4227 33.0011 39.9898C32.5694 39.6652 24.9068 34.7955 22.2086 32.4148C21.4531 31.7655 20.5897 30.4669 22.3165 28.9519L33.6487 18.1305C34.9438 16.8319 36.2389 13.8019 30.8426 17.4812L15.7331 27.7616C15.7331 27.7616 14.0063 28.8437 10.7686 27.8698L3.75342 25.7055C3.75342 25.7055 1.16321 24.0823 5.58815 22.459C16.3807 17.3729 29.6555 12.1786 41.4193 7.30899Z" />
-                    </svg>
-                </div>
-                <div class="menu__aside-link">
-                    <svg width="24" viewBox="0 0 24 24" xml:space="preserve" fill="currentColor">
-                        <path
-                            d="M19.589 6.686a4.793 4.793 0 0 1-3.77-4.245V2h-3.445v13.672a2.896 2.896 0 0 1-5.201 1.743l-.002-.001.002.001a2.895 2.895 0 0 1 3.183-4.51v-3.5a6.329 6.329 0 0 0-5.394 10.692 6.33 6.33 0 0 0 10.857-4.424V8.687a8.182 8.182 0 0 0 4.773 1.526V6.79a4.831 4.831 0 0 1-1.003-.104z" />
+                            d="M18.0323 15.9569L15.1126 13.4173C15.6078 12.7377 15.9908 11.992 16.2615 11.18C16.5321 10.368 16.6674 9.52435 16.6674 8.64903C16.6559 7.53183 16.4371 6.48374 16.0109 5.50476C15.5848 4.51426 15.006 3.65333 14.2747 2.92197C13.5433 2.19061 12.6824 1.61186 11.6919 1.18571C10.7129 0.759567 9.66483 0.546494 8.54763 0.546494C7.71838 0.546494 6.92367 0.661669 6.16352 0.892017C5.39185 1.13388 4.68065 1.47365 4.02991 1.91131C3.37917 2.34898 2.79466 2.87302 2.27638 3.48345C1.76961 4.10539 1.36074 4.79644 1.04977 5.55659C0.727277 6.31674 0.531481 7.09417 0.462376 7.88888C0.381754 8.68358 0.419185 9.46677 0.574671 10.2384C0.730157 11.0101 0.997938 11.753 1.37801 12.4671C1.74657 13.1696 2.21879 13.8146 2.79466 14.402C3.38205 14.9779 4.02703 15.4558 4.72959 15.8359C5.44368 16.2045 6.18655 16.4665 6.95822 16.622C7.72989 16.7775 8.51308 16.8149 9.30779 16.7343C10.114 16.6652 10.8972 16.4751 11.6573 16.1642C11.9683 16.026 12.2707 15.8734 12.5643 15.7064C12.858 15.5393 13.1373 15.3579 13.4022 15.1622L16.4429 17.7881C16.6271 17.9494 16.8402 18.0214 17.0821 18.0041C17.3239 17.9868 17.5255 17.886 17.6867 17.7018L18.1186 17.2007C18.2799 17.0165 18.3519 16.8034 18.3346 16.5615C18.3173 16.3197 18.2165 16.1181 18.0323 15.9569ZM8.54763 14.7302C7.92569 14.7302 7.33254 14.6439 6.76819 14.4711C6.19231 14.2868 5.65963 14.0334 5.17014 13.711C4.68065 13.3885 4.2401 12.9969 3.84851 12.5362C3.46843 12.064 3.16322 11.5457 2.93287 10.9813C2.691 10.417 2.54128 9.83533 2.48369 9.23642C2.43762 8.63751 2.46929 8.05012 2.57871 7.47425C2.68813 6.89837 2.8868 6.34554 3.17474 5.81573C3.45116 5.27441 3.8082 4.79068 4.24586 4.36453C4.68353 3.92687 5.16726 3.56983 5.69706 3.29341C6.22686 3.00547 6.7797 2.80392 7.35558 2.68874C7.93145 2.57357 8.51884 2.54477 9.11775 2.60236C9.71666 2.65995 10.2983 2.80392 10.8626 3.03427C11.4385 3.27613 11.9568 3.5871 12.4175 3.96718C12.8782 4.34726 13.2727 4.78204 13.6009 5.27153C13.9292 5.76102 14.1797 6.29371 14.3524 6.86958C14.5252 7.44545 14.6116 8.0386 14.6116 8.64903C14.6116 9.4898 14.4561 10.2787 14.1451 11.0159C13.8226 11.753 13.3878 12.398 12.8408 12.9508C12.2937 13.5036 11.6516 13.9413 10.9145 14.2638C10.1774 14.5748 9.38841 14.7302 8.54763 14.7302Z" />
                     </svg>
                 </div>
             </div>
         </div>
-    </section>
-
-    <script>
-
-
-    const menu = document.querySelector('.menu')
-    const buttonMenu = document.querySelector('.menu__btn-close')
-
-
-       buttonMenu.addEventListener('click', ()=> (
-        menu.classList.toggle('--is-active')
-       ))
-
-
-    </script>
+    </header>
 
 </body>
 
