--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <body>
 
     <header class="header">
-        <div class="layout-container">
+        <div class="container --relative">
             <div class="header__logo">
-                <div class="logo">
-                    <img src="./img/Linklogo.png" alt="">
-                </div>
+                <img src="./img/Linklogo.png" alt="">
+            </div>
             <div class="header__upmenu">
                 <a href="">info@gatd.ca</a>
                 <a href="">(514)776-9917</a>
@@ -38,8 +37,73 @@
                     </svg>
                 </div>
             </div>
-        </div>
     </header>
+
+    <main class="layout">
+
+        <section class="home-support">
+            <div class="container">
+                <div class="home-support__block">
+                    <div class="home-support__text">
+                        <h2>De quoi as-tu besoin d'assistance ?</h2>
+                        Nous sommes là pour vous aider à chaque fois que nécessaire !
+                    </div>
+                    <div class="home-support__links">
+                        <div class="item"><a class="home-support__link" href="">Où acheter</a></div>
+                        <div class="item"><a class="home-support__link" href="">Démarrage</a></div>
+                        <div class="item"><a class="home-support__link" href="">SUBVENTIONS</a></div>
+                        <div class="item"><a class="home-support__link" href="">THERMOPOMPES</a></div>
+                    </div>
+
+                    <div class="home-support__bottom">
+                        <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M9.68966 22.3926C4.66879 21.3711 0.886841 16.9327 0.886841 11.6075C0.886841 5.53033 5.81207 0.605103 11.8893 0.605103C17.9665 0.605103 22.8917 5.53033 22.8917 11.6075C22.8917 11.7814 22.8874 11.951 22.8787 12.1248"
+                                stroke="#2E2D2C" stroke-width="0.776256" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path
+                                d="M11.6763 16.9675C11.6763 16.2981 11.9458 15.6895 12.3848 15.2504C12.8239 14.8114 13.4281 14.5419 14.1019 14.5419C14.7714 14.5419 15.38 14.8114 15.819 15.2504C16.2581 15.6895 16.5276 16.2937 16.5276 16.9675C16.5276 17.637 16.2581 18.2456 15.819 18.6846"
+                                stroke="white" stroke-width="3.10503" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M15.819 18.6846L11.8893 22.61H17.0493" stroke="white" stroke-width="3.10503"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M22.1527 22.61V14.5419" stroke="white" stroke-width="3.10503"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M18.2273 20.1496L22.1527 14.5419" stroke="white" stroke-width="3.10503"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M23.948 20.1495H18.2273" stroke="white" stroke-width="3.10503"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path
+                                d="M11.6763 16.9675C11.6763 16.2981 11.9458 15.6895 12.3848 15.2504C12.8239 14.8114 13.4281 14.5419 14.1019 14.5419C14.7714 14.5419 15.38 14.8114 15.819 15.2504C16.2581 15.6895 16.5276 16.2937 16.5276 16.9675C16.5276 17.637 16.2581 18.2456 15.819 18.6846"
+                                stroke="#2E2D2C" stroke-width="0.776256" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M15.819 18.6846L11.8893 22.61H17.0493" stroke="#2E2D2C" stroke-width="0.776256"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M22.1527 22.61V14.5419" stroke="#2E2D2C" stroke-width="0.776256"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M18.2273 20.1496L22.1527 14.5419" stroke="#2E2D2C" stroke-width="0.776256"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M23.948 20.1495H18.2273" stroke="#2E2D2C" stroke-width="0.776256"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M16.3232 7.17347L11.8892 11.6075L5.86853 5.58679" stroke="#2E2D2C"
+                                stroke-width="0.776256" stroke-miterlimit="10" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path
+                                d="M13.2542 11.6076C13.2542 12.3596 12.6456 12.9682 11.8936 12.9682C11.1415 12.9682 10.533 12.3596 10.533 11.6076C10.533 10.8555 11.1415 10.2469 11.8936 10.2469C12.6413 10.2469 13.2542 10.8555 13.2542 11.6076Z"
+                                fill="white" stroke="#2E2D2C" stroke-width="0.776256" stroke-miterlimit="10"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M3.34729 11.6075H4.76009" stroke="#2E2D2C" stroke-width="0.776256"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M11.8893 4.47835V3.06555" stroke="#2E2D2C" stroke-width="0.776256"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        <p>Urgence? <span>Cliquez ici</span></p>
+                    </div>
+                </div> 
+            </div>
+        </section>
+
+    </main>
 
 </body>
 
